...
                                            EmptyDisplay()
                                        } else {
                                            LazyRow(
                                                modifier = Modifier
                                                    .fillMaxSize()
                                                    .weight(1f)
                                                    .testTag("product_list"),
                                                state = scrollState,
                                                verticalAlignment = Alignment.CenterVertically
                                            ) {
                                                items(total) { index ->
                                                    val product = products[index]
                                                    ProductCard(
...

@Preview(showBackground = true)
@Preview(uiMode = Configuration.UI_MODE_NIGHT_YES)
@Composable
fun ProductListTabScreenContentPreview() {
    val fakeProducts = listOf(
        ProductEntity(id = 1, title = "Product 1", price = 100.0),
        ProductEntity(id = 2, title = "Product 2", price = 150.0),
        ProductEntity(id = 3, title = "Product 3", price = 200.0)
    )
    val products = listOf(
        ProductEntity(
            id = 1,
...
        )
    )

    ProductListTabScreenContent(
        statusStateCategory = StatusState.Success,
        categories = listOf(
            CategoryEntity(slug = "1", name = "Category 1"),
            CategoryEntity(slug = "2", name = "Category 2")
        ),
        selectedCategory = CategoryEntity(slug = "1", name = "Category 1"),
        products = flowPaging.collectAsLazyPagingItems(),
        scrollState = rememberLazyListState(),
        currentIndicator = 0,
...
