...
import androidx.compose.ui.tooling.preview.Preview
import nam.tran.resource.theme.AppTheme

@Composable
fun EmptyDisplay(modifier: Modifier = Modifier) {
    Box(
        modifier = modifier.testTag("empty_display").fillMaxWidth(),
        contentAlignment = Alignment.Center
    ) {
        Text(
            "Oops! No item",
            style = MaterialTheme.typography.headlineMedium.copy(fontWeight = FontWeight.Bold),
            color = MaterialTheme.colorScheme.primary
...
