package nam.tran.home.product_list

import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.assertIsNotDisplayed
import androidx.compose.ui.test.junit4.createComposeRule
import androidx.compose.ui.test.onAllNodesWithTag
import androidx.compose.ui.test.onAllNodesWithText
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performScrollToIndex
import dagger.hilt.android.testing.HiltAndroidRule
import dagger.hilt.android.testing.HiltAndroidTest
import kotlinx.coroutines.test.runTest
import nam.tran.fake.CaseTest
import nam.tran.resource.theme.AppTheme
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import javax.inject.Inject

@HiltAndroidTest
class ProductListScreenTest {

    @get:Rule(order = 1)
    var hiltTestRule = HiltAndroidRule(this)

    @get:Rule(order = 2)
    var composeTestRule = createComposeRule()

    @Inject
    lateinit var caseTest: CaseTest

    @Before
    fun setup() {
        hiltTestRule.inject()
        composeTestRule.setContent {
            AppTheme {
                ProductListTabScreen { }
            }
        }
    }

    @Test
    fun loadCategoriesFail() = runTest {
        caseTest.isCategorySuccess = false

        val tag = "load_category_error"

        composeTestRule.onNodeWithTag("loading").assertIsDisplayed()

        composeTestRule.waitUntil(
            condition = {
                composeTestRule
                    .onAllNodesWithTag(tag)
                    .fetchSemanticsNodes().isNotEmpty()
            },
            timeoutMillis = 5_000
        )

        composeTestRule.onNodeWithTag(tag).assertIsDisplayed()
    }

    @Test
    fun loadCategoriesSuccess() = runTest {
        caseTest.isCategorySuccess = true

        composeTestRule.onNodeWithTag("loading").assertIsDisplayed()

        composeTestRule.waitUntil(
            condition = {
                composeTestRule
                    .onAllNodesWithText("Category 1")
                    .fetchSemanticsNodes().isNotEmpty()
            },
            timeoutMillis = 5_000
        )

        composeTestRule
            .onNodeWithText("Category 1")
            .assertIsDisplayed()
    }

    @Test
    fun performClickAndLoadProduct() {

        loadCategoriesSuccess()

        composeTestRule
            .onNodeWithText("Category 1")
            .performClick()

        composeTestRule.onNodeWithTag("pull_to_refresh_indicator").assertIsDisplayed()
    }

    @Test
    fun loadProductEmpty() = runTest {
        caseTest.productType = CaseTest.ProductType.SuccessButEmpty

        performClickAndLoadProduct()

        composeTestRule.waitUntil(
            condition = {
                composeTestRule
                    .onAllNodesWithTag("empty_display")
                    .fetchSemanticsNodes().isNotEmpty()
            },
            timeoutMillis = 5_000
        )

        composeTestRule
            .onNodeWithTag("empty_display")
            .assertIsDisplayed()
    }

    @Test
    fun loadProductsAndLoadMoreSuccess() = runTest {
        caseTest.productType = CaseTest.ProductType.Success

        performClickAndLoadProduct()

        composeTestRule.waitUntil(
            condition = {
                composeTestRule
                    .onAllNodesWithText("Product 1")
                    .fetchSemanticsNodes().isNotEmpty()
            },
            timeoutMillis = 5_000
        )

        composeTestRule
            .onNodeWithText("Product 1")
            .assertIsDisplayed()

        composeTestRule
            .onNodeWithTag("product_list")
            .performScrollToIndex(9)

        composeTestRule
            .onNodeWithTag("loading", useUnmergedTree = true)
            .assertIsDisplayed()

        composeTestRule.waitUntil(
            timeoutMillis = 5_000,
            condition = {
                composeTestRule
                    .onAllNodesWithTag("loading", useUnmergedTree = true)
                    .fetchSemanticsNodes()
                    .isEmpty()
            }
        )

        composeTestRule
            .onNodeWithTag("loading", useUnmergedTree = true)
            .assertIsNotDisplayed()

        composeTestRule
            .onNodeWithTag("product_list")
            .performScrollToIndex(10)

        composeTestRule
            .onNodeWithText("Product 11")
            .assertIsDisplayed()
    }

    @Test
    fun loadProductsFail() = runTest {
        caseTest.productType = CaseTest.ProductType.Error

        val tag = "load_product_error"

        performClickAndLoadProduct()

        composeTestRule.waitUntil(
            condition = {
                composeTestRule
                    .onAllNodesWithTag(tag)
                    .fetchSemanticsNodes().isNotEmpty()
            },
            timeoutMillis = 5_000
        )

        composeTestRule
            .onNodeWithTag(tag)
            .assertIsDisplayed()
    }

    @Test
    fun loadProductLoadMoreFail() = runTest {
        caseTest.productType = CaseTest.ProductType.LoadMoreError
        val tag = "load_product_more_error"

        performClickAndLoadProduct()

        composeTestRule.waitUntil(
            condition = {
                composeTestRule
                    .onAllNodesWithText("Product 1")
                    .fetchSemanticsNodes().isNotEmpty()
            },
            timeoutMillis = 5_000
        )

        composeTestRule
            .onNodeWithText("Product 1")
            .assertIsDisplayed()

        composeTestRule.onNodeWithTag("product_list") // testTag của LazyRow
            .performScrollToIndex(10)

        composeTestRule.waitUntil(
            timeoutMillis = 5_000,
            condition = {
                composeTestRule
                    .onAllNodesWithTag(tag)
                    .fetchSemanticsNodes().isNotEmpty()
            }
        )

        composeTestRule
            .onNodeWithTag(tag)
            .assertIsDisplayed()
    }
}


